--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-content-loader": "^6.1.0",
+    "react-dom": "^17.0.2",
+    "react-responsive-masonry": "^2.1.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "axios": "^0.26.0",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.0",
     "styled-components": "^5.3.3",
     "vite": "^2.8.0"
   }
